--- a/server-source/public/contacts.html
+++ b/server-source/public/contacts.html
@@ -2,6 +2,7 @@
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Contacts</title>
+ <link rel="stylesheet" href="styles/contacts.css">
  </head>
  <body>
   <div class="container">
@@ -13,6 +14,7 @@
           <th>LN</th>
           <th>email</th>
           <th>cell</th>
+          <th>Profile</th>
         </tr>
       </thead>
       <thbody>
@@ -22,6 +24,7 @@
           <th>{{lastName}}</th>
           <th>{{email}}</th>
           <th>{{phone}}</th>
+          <th><a href="/contact/{{id}}">Link</a></th>
         </tr>
         {{/contacts}}
       </thbody>
