--- a/server-source/public/index.html
+++ b/server-source/public/index.html
@@ -10,25 +10,20 @@
    <div class="header">
      <a onclick="show_hide_navbar()" id="nav-logo">C++Server</a>
      <div class="navbar">
-       <a class="btn btn-shop">Intro</a>
-       <a class="btn btn-news">About</a>
-       <a class="btn btn-support">More</a>
+       <a class="btn btn-shop" style="text-decoration: none; color: black;" href="/contacts">Contacts</a>
      </div>
    </div>
    <div class="content-main">
-      <h1>Hello, CPP Server</h1>
-      <p>This webpage is served by webserver build exclusively using C++.</p>         
-      <h2>Pourquoi l'utiliser?</h2>
-      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-      The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-      <h1>Where can I get some?</h1>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>         
-      <h2>Why do we use it?</h2>
-      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-      The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+      <h1>Hey, CPP Server!</h1>
+      <p>Webserver serving this page build with C++ microframework Crow. It uses other C++ libraries: boost, bsoncxx, and mongocxx.</p>
+      <p>It supports MongoDB, and Crow framework have its own implementation of Mustache, allowing for backend rendering.</p>
+      <p>Easy to setup, develop, and deploy with Docker! Learn more on projects GitHub repo.</p>
+      <br/>         
+      <h2>Documentation</h2>
+      <p>Comming soon! For now, you can check an example of MongoDB query by visiting contacts tab.</p>
     </div>
   </div>
-  <div class="footer"><a href="https://github.com/aakatev">Follow me on GitHub!</a></div>
+  <div class="footer"><a style="text-decoration: none; color: black;" href="https://github.com/aakatev">Follow me on GitHub!</a></div>
   <script src="scripts/script.js"></script>
 </body>
 </html>
