License and heroku deployment uptd

--- a/server-source/public/index.html
+++ b/server-source/public/index.html
@@ -13,7 +13,7 @@
         D<a class="big-logo">ockerized </a>C<a class="big-logo">row<a/>
       </div>
       <div class="text">
-        Fast and easy solution for your webb app
+        Fast and easy solution for your webapp
       </div>
       <a href="/project">Learn More</a>
     </div>
