--- a/server-source/public/contact.html
+++ b/server-source/public/contact.html
@@ -1,6 +1,7 @@
 <html>
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="content-type" content="text/html; charset=utf-8" />
  <title>Contact</title>
  </head>
  <body>
