--- a/server-source/public/contacts.html
+++ b/server-source/public/contacts.html
@@ -1,6 +1,7 @@
 <html>
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="content-type" content="text/html; charset=utf-8" />
  <title>Contacts</title>
  <link rel="stylesheet" href="styles/contacts.css">
  </head>
