Cleaned up code

--- a/server-source/public/contacts.html
+++ b/server-source/public/contacts.html
@@ -1,41 +1,37 @@
 <html>
-<head>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <title>Contacts</title>
- <link rel="stylesheet" href="styles/contacts.css">
- </head>
- <body>
-  <div class="container">
-    <h2>Contacts:</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>FN</th>
-          <th>LN</th>
-          <th>email</th>
-          <th>cell</th>
-          <th>Profile</th>
-        </tr>
-      </thead>
-      <thbody>
-        {{#contacts}}
-        <tr>
-          <th>{{firstName}}</th>
-          <th>{{lastName}}</th>
-          <th>{{email}}</th>
-          <th>{{phone}}</th>
-          <th><a href="/contact/{{id}}">Link</a></th>
-        </tr>
-        {{/contacts}}
-      </thbody>
-    </table>
-    <a href="/">Next</a>
-  </div>
-</body>
+  <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+     <title>Contacts</title>
+     <link rel="stylesheet" href="styles/contacts.css">
+   </head>
+   <body>
+    <div class="container">
+      <h2>Contacts:</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>First</th>
+            <th>Last</th>
+            <th>Email</th>
+            <th>Cell</th>
+            <th>Profile</th>
+          </tr>
+        </thead>
+        <thbody>
+          {{#contacts}}
+          <tr>
+            <th>{{firstName}}</th>
+            <th>{{lastName}}</th>
+            <th>{{email}}</th>
+            <th>{{phone}}</th>
+            <th><a href="/contact/{{phone}}">Link</a></th>
+          </tr>
+          {{/contacts}}
+        </thbody>
+      </table>
+      <a href="/project">Add new</a>
+      <a href="/project">Home</a>
+    </div>
+  </body>
 </html>
-<!-- Error loading this URI: Could not load the source for http://localhost:8080/contacts.
-[Exception... "Component returned failure code: 0x80470002 (NS_BASE_STREAM_CLOSED) [nsIInputStream.available]"  nsresult: "0x80470002 (NS_BASE_STREAM_CLOSED)"  location: "JS frame :: resource://devtools/shared/base-loader.js -> resource://devtools/shared/DevToolsUtils.js :: onResponse :: line 568"  data: no]
-Stack: onResponse@resource://devtools/shared/base-loader.js -> resource://devtools/shared/DevToolsUtils.js:568:25
-onStopRequest@resource://gre/modules/NetUtil.jsm:126:17
-Line: 568, column: 0 -->
