--- a/server-source/public/index.html
+++ b/server-source/public/index.html
@@ -1,17 +1,17 @@
 <html>
-<head>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <title>CPP Server</title>
- <link href="https://fonts.googleapis.com/css?family=Condiment|Alegreya+SC" rel="stylesheet"> 
- <link rel="stylesheet" href="styles/index.css">
-</head>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>DMC Stack</title>
+    <link href="https://fonts.googleapis.com/css?family=Condiment|Alegreya+SC" rel="stylesheet"> 
+    <link rel="stylesheet" href="styles/index.css">
+  </head>
 <body>
   <header class="showcase">
     <div class="content">
       <div class="bird-container"><div class="bird" style="background-image: url(./svgs/bird-cells.svg);"></div></div>
       <div class="title">
-        D<a class="big-logo">ockerized </a>C<a class="big-logo">row<a/>
+        D<a class="big-logo">ocker, </a>M<a class="big-logo">ongo, </a>C<a class="big-logo">row<a/>
       </div>
       <div class="text">
         Fast and easy solution for your webapp
@@ -19,7 +19,5 @@
       <a href="/project">Learn More</a>
     </div>
   </header>
-  <!-- <div class="footer"><a style="text-decoration: none; color: black;" href="https://github.com/aakatev">Follow me on GitHub!</a></div> -->
-  <!-- <script src="scripts/script.js"></script> -->
 </body>
 </html>
